--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,6 +3,7 @@ body, html {
   padding: 0;
   width: 100%;
   height: 100%;
+  min-width: 350px;
 }
 
 body {
@@ -82,7 +83,8 @@ ul {
  */
 
 .nav {
-  width: 800px;
+  width: 100%;
+  min-width: 350px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -122,7 +124,7 @@ ul {
 
 main {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-  width: 800px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -142,7 +144,7 @@ main {
 
 .hero {
   float: left;
-  width: 480px;
+  width: 100%;
   position: relative;
   background-image: url("./images/dog.jpg");
   background-size: cover;
@@ -170,7 +172,7 @@ main {
 
 .top-news {
   float: right;
-  width: 320px;
+  width: 100%;
   height: 300px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
@@ -215,7 +217,7 @@ main {
  */
 
 .scores {
-  width: 480px;
+  width: 100%;
   float: left;
   padding-top: 1em;
 }
@@ -265,7 +267,7 @@ main {
 
 .weather {
   float: right;
-  width: 320px;
+  width: 100%;
   padding: 1em;
 }
 
