--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -93,7 +93,7 @@ ul {
   width: 100%;
   padding: 0;
   margin: 0;
-  font-size: 18px;
+  font-size: 12px;
 }
 
 .nav__item {
@@ -109,6 +109,7 @@ ul {
 .nav a {
   text-decoration: none;
   color: #616161;
+  padding: 1.5em;
 }
 
 .nav a:hover {
