--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,9 +1,9 @@
-body, html {
+body, 
+html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  min-width: 350px;
 }
 
 body {
@@ -12,11 +12,20 @@ body {
   color: #424242;
 }
 
-h1, h2, h3, h4, h5 {
-  margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0; 
 }
 
-header, nav, footer, section, article, div {
+header,
+nav, 
+footer, 
+section, 
+article, 
+div {
   box-sizing: border-box;
 }
 
@@ -30,7 +39,7 @@ ul {
 /*
  *
  * Common
- *
+ * 
  */
 
 .news__more {
@@ -54,7 +63,6 @@ ul {
 }
 
 .header__inner {
-  /* width: 800px; */
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -84,7 +92,6 @@ ul {
 
 .nav {
   width: 100%;
-  min-width: 350px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -93,7 +100,6 @@ ul {
   width: 100%;
   padding: 0;
   margin: 0;
-  font-size: 12px;
 }
 
 .nav__item {
@@ -101,7 +107,7 @@ ul {
   display: inline-block;
   width: 24%;
   text-align: center;
-  line-height: 48px;
+  line-height: 24px;
   padding: 24px;
   text-transform: uppercase;
 }
@@ -145,10 +151,9 @@ main {
  */
 
 .hero {
-  float: left;
   width: 100%;
   position: relative;
-  background-image: url("../images/dog.jpg");
+  background-image: url("./images/dog.jpg");
   background-size: cover;
   height: 300px;
 }
@@ -173,8 +178,6 @@ main {
  */
 
 .top-news {
-  float: right;
-  width: 100%;
   height: 300px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
@@ -219,8 +222,6 @@ main {
  */
 
 .scores {
-  width: 100%;
-  float: left;
   padding-top: 1em;
 }
 
@@ -231,7 +232,7 @@ main {
 
 .scores__table th,
 .scores__table td {
-  padding: 1em;
+  padding: 1em; 
 }
 
 .scores__table th {
@@ -268,8 +269,6 @@ main {
  */
 
 .weather {
-  float: right;
-  width: 100%;
   padding: 1em;
 }
 
@@ -319,7 +318,7 @@ main {
 
 /*
  *
- * Weather
+ * Recent News
  *
  */
 
@@ -374,4 +373,5 @@ footer li {
 footer a {
   text-decoration: none;
   color: #333;
+  padding: 1.5em;
 }
