--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,15 +1,20 @@
-body, 
+body,
 html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+  max-width: 850px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 body {
   font-family: Roboto;
   font-size: 12px;
   color: #424242;
+  width: 100%;
+
 }
 
 h1,
@@ -17,14 +22,14 @@ h2,
 h3,
 h4,
 h5 {
-  margin: 0; 
+  margin: 0;
 }
 
 header,
-nav, 
-footer, 
-section, 
-article, 
+nav,
+footer,
+section,
+article,
 div {
   box-sizing: border-box;
 }
@@ -39,7 +44,7 @@ ul {
 /*
  *
  * Common
- * 
+ *
  */
 
 .news__more {
@@ -77,10 +82,11 @@ ul {
 
 .header__title {
   font-weight: 300;
-  font-size: 4em;
+  /* font-size: 4em; */
   margin: 0.5em 0.25em;
   display: inline-block;
   color: #212121;
+  padding-top: 1em;
 }
 
 
@@ -153,7 +159,7 @@ main {
 .hero {
   width: 100%;
   position: relative;
-  background-image: url("./images/dog.jpg");
+  background-image: url("../images/dog.jpg");
   background-size: cover;
   height: 300px;
 }
@@ -232,7 +238,7 @@ main {
 
 .scores__table th,
 .scores__table td {
-  padding: 1em; 
+  padding: 1em;
 }
 
 .scores__table th {
