--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,14 +2,11 @@ body,
 html {
   margin: 0;
   padding: 0;
-  width: 100%;
   height: 100%;
-  max-width: 850px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 body {
+  max-width: 850px;
   font-family: Roboto;
   font-size: 12px;
   color: #424242;
@@ -47,13 +44,17 @@ ul {
  *
  */
 
+ .container{
+    display: flex;
+    flex-wrap: wrap;
+  }
+
 .news__more {
   float: right;
   font-size: .8em;
   color: #333;
   text-decoration: none;
 }
-
 
 /*
  *
@@ -75,20 +76,17 @@ ul {
 
 .header__logo {
   height: 72px;
-  margin-right: 1em;
+  margin: 0 1em;
   vertical-align: top;
-  margin-top: 12px;
 }
 
 .header__title {
   font-weight: 300;
-  /* font-size: 4em; */
-  margin: 0.5em 0.25em;
+  font-size: 4em;
   display: inline-block;
   color: #212121;
-  padding-top: 1em;
+  padding-top: .2em;
 }
-
 
 /*
  *
@@ -114,14 +112,13 @@ ul {
   width: 24%;
   text-align: center;
   line-height: 24px;
-  padding: 24px;
+  padding: 1em;
   text-transform: uppercase;
 }
 
 .nav a {
   text-decoration: none;
   color: #616161;
-  padding: 1.5em;
 }
 
 .nav a:hover {
@@ -229,6 +226,7 @@ main {
 
 .scores {
   padding-top: 1em;
+  width: 100%;
 }
 
 .scores__table {
@@ -276,6 +274,7 @@ main {
 
 .weather {
   padding: 1em;
+  width: 100%;
 }
 
 .weather__location {
@@ -373,11 +372,84 @@ footer {
 
 footer li {
   display: inline-block;
-  margin: 0 1em;
+  width: 30%;
+  text-align: center;
+  margin: 0;
 }
 
 footer a {
   text-decoration: none;
   color: #333;
-  padding: 1.5em;
+}
+
+/*
+ *
+ * MEDIA QUERIES FOR SCREEN SIZES
+ *
+ */
+
+@media only screen and (max-width: 515px) {
+  body {
+    background-color: yellow;
+  }
+  .header{
+    background-color: yellow;
+  }
+  .header__logo{
+    height: 56px;
+  }
+  .header__title{
+    font-size: 2.25em;  /* 320px; */
+    padding-top: 0.5em; /* 320px; */
+  }
+  .nav__list {
+    margin: 0.5em 0;
+  }
+  .nav a {
+    padding: 1em;
+  }
+}
+
+ @media only screen and (min-width: 650px) {
+  body {
+    background-color: lightblue;
+  }
+  .header{
+    background-color: lightblue;
+  }
+  .news__div{
+    width: 100%;
+  }
+  .hero{
+    width: 60%;
+  }
+  .top-news{
+    width: 40%;
+  }
+  .extra__div{
+    width: 100%;
+  }
+  .weather{
+    width: 60%;
+  }
+  .scores{
+    width: 40%;
+  }
+  .snippet {
+    width: 50%;
+  }
+  .snippet:last-of-type {
+    margin-right: 0;
+  }
+  @media only screen and (min-width: 850px) {
+    body {
+      background-color: palevioletred;
+      max-width: 850px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .header{
+      background-color: palevioletred;
+    }
+  }
 }
