--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,7 +2,6 @@ body,
 html {
   margin: 0;
   padding: 0;
-  height: 100%;
 }
 
 body {
@@ -11,6 +10,7 @@ body {
   font-size: 12px;
   color: #424242;
   width: 100%;
+  height: 100%;
 
 }
 
@@ -182,6 +182,7 @@ main {
 
 .top-news {
   border-bottom: 1px solid #E0E0E0;
+  max-width: 45em;
   padding: 1em;
 }
 
@@ -389,13 +390,7 @@ footer a {
  *
  */
 
-@media only screen and (max-width: 515px) {
-  body {
-    background-color: yellow;
-  }
-  .header{
-    background-color: yellow;
-  }
+@media only screen and (max-width: 600px) {
   .header__logo{
     height: 56px;
   }
@@ -411,13 +406,7 @@ footer a {
   }
 }
 
- @media only screen and (min-width: 650px) {
-  body {
-    background-color: lightblue;
-  }
-  .header{
-    background-color: lightblue;
-  }
+ @media only screen and (min-width: 601px) {
   .news__div{
     width: 100%;
   }
@@ -445,12 +434,8 @@ footer a {
 }
   @media only screen and (min-width: 850px) {
     body {
-      background-color: palevioletred;
       max-width: 850px;
       margin-left: auto;
       margin-right: auto;
-    }
-    .header{
-      background-color: palevioletred;
     }
   }
